set warning message

--- a/public/stylesheets/style_login.css
+++ b/public/stylesheets/style_login.css
@@ -15,6 +15,13 @@ html body div.container div#green-field div#brown-field div#white-field {
   position: relative;
 }
 
+html body div.container div#green-field div#brown-field div#white-field div#warningmessage {
+  background-color: red;
+  color: yellow;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 html body div.container div#green-field div#brown-field div#white-field #title_login {
   position: absolute;
   text-align: center;
