--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,6 +22,8 @@
         <div id="green-field" class="row justify-content-center align-self-center bg-success">
             <div id="brown-field" class="col border border-white m-3">
                 <div id="white-field" class="border border-dark rounded m-4">
+                    <div id="warningmessage">You can not register as a user because this service is under developing.
+                    </div>
                     <div id="title_login">LOGIN</div>
                     <form method="post" action="/login">
                         <input type="text" id="login_name" name="username" placeholder="User"></input>
