--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,40 +1,52 @@
-html body div.container div#green-field {
-  width: 600px;
+html body {
+  background-color: #f4f5f7;
 }
 
-html body div.container div#green-field div#brown-field {
+html body div#main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  width: 600px;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
   background-color: #8b4513;
   border-width: 5px !important;
 }
 
-html body div.container div#green-field div#brown-field h1 {
+html body div#main div#green-field div#brown-field h1 {
   text-decoration: underline;
   color: aliceblue;
 }
 
-html body div.container div#green-field div#brown-field table tbody .batter_num {
+html body div#main div#green-field div#brown-field table tbody .batter_num {
   width: 56px;
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field table tbody .batter_name {
+html body div#main div#green-field div#brown-field table tbody .batter_name {
   font-size: small;
 }
 
-html body div.container div#green-field div#brown-field table tbody .batter_box_td {
+html body div#main div#green-field div#brown-field table tbody .batter_box_td {
   width: 60px;
   height: 50px;
   padding: 0;
   border: solid 1px black;
 }
 
-html body div.container div#green-field div#brown-field table tbody .batter_box_td .hitting_result {
+html body div#main div#green-field div#brown-field table tbody .batter_box_td .hitting_result {
   width: 100%;
   height: 100%;
   line-height: 50px;
 }
 
-html body div.container div#green-field div#brown-field table tbody .batter_box_td .hitting_result a {
+html body div#main div#green-field div#brown-field table tbody .batter_box_td .hitting_result a {
   display: inline-block;
   vertical-align: middle;
   width: 100%;
