--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,15 @@
 html {
     body {
-        div.container {
+        background-color: #f4f5f7;
+        div#main {
+            margin: 0;
+            padding: 0;
+            width: 100%;
             div#green-field {
                 // height: 500px;
                 width: 600px;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
                     // height: 80%;
                     background-color: #8b4513;
