--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -1,48 +1,73 @@
-html body div.container div#green-field {
-  width: 600px;
+html body {
+  background-color: #f4f5f7;
 }
 
-html body div.container div#green-field div#brown-field {
+html body div#main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  width: 600px;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
   background-color: #8b4513;
   border-width: 5px !important;
 }
 
-html body div.container div#green-field div#brown-field h1 {
+html body div#main div#green-field div#brown-field h2 {
   text-decoration: underline;
   color: aliceblue;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.batter_num {
+html body div#main div#green-field div#brown-field h3 {
+  color: aliceblue;
+}
+
+html body div#main div#green-field div#brown-field h4 {
+  color: aliceblue;
+}
+
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.batter_num {
   width: 56px;
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata {
   padding: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata p {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata p {
   margin: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata p button {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata p button {
   width: 250px;
   font-size: 30px;
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata p a {
+  position: absolute;
+  right: 20px;
+}
+
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body {
   padding: 1px;
   height: 0px !important;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li {
   list-style: none;
   width: 100%;
   height: 50px;
@@ -51,18 +76,18 @@ html body div.container div#green-field div#brown-field table tbody tr.tablebody
   padding: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li p {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li p {
   position: absolute;
   z-index: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li .hitting_result {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li .hitting_result {
   width: 100%;
   height: 100%;
   line-height: 50px;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li .hitting_result a {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapsing div.card-body ul li .hitting_result a {
   display: inline-block;
   vertical-align: middle;
   width: 100%;
@@ -70,17 +95,17 @@ html body div.container div#green-field div#brown-field table tbody tr.tablebody
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body {
   padding: 1px;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li {
   list-style: none;
   width: 100%;
   height: 50px;
@@ -89,22 +114,28 @@ html body div.container div#green-field div#brown-field table tbody tr.tablebody
   padding: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li p {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li p {
   position: absolute;
   z-index: 0;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li .hitting_result {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li .hitting_result {
   width: 100%;
   height: 100%;
   line-height: 50px;
 }
 
-html body div.container div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li .hitting_result a {
+html body div#main div#green-field div#brown-field table tbody tr.tablebody-tr td.tabledata div.collapse div.card-body ul li .hitting_result a {
   display: inline-block;
   vertical-align: middle;
   width: 100%;
   height: 100%;
   font-weight: bold;
+}
+
+html body div#main div#green-field div#brown-field a#historyGameBtn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 /*# sourceMappingURL=style2.css.map */
