--- a/public/stylesheets/style2_phone.scss
+++ b/public/stylesheets/style2_phone.scss
@@ -1,28 +1,35 @@
 html {
+    height: 100%;
     body {
-        div.container {
+        height: 100%;
+        div#main {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             div#green-field {
-                // height: 500px;
+                // height: 100%;
                 // width: 600px;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    // height: 94%;
                     background-color: #8b4513;
                     border-width: 5px !important;
-                    padding-top: 10px;
-                    padding-bottom: 20px;
-                    a#logoutBtn {
-                        float: right;
-                        // margin-top: 10px;
-                    }
                     h2 {
                         text-decoration: underline;
                         color: aliceblue;
-                        float: left;
+                        // float: left;
                     }
                     h3 {
-                        float: left;
+                        // float: left;
+                        color: aliceblue;
                     }
-                    table#playing-member {
+                    h4 {
+                        color: aliceblue;
+                    }
+                    // table#playing-member {
+                    table {
                         tbody {
                             tr.tablebody-tr {
                                 td.batter_num {
@@ -39,6 +46,10 @@ html {
                                             font-weight: bold;
                                             padding: 0;
                                         }
+                                        a {
+                                            position: absolute;
+                                            right: 20px;
+                                        }
                                     }
                                     div.collapsing {
                                         div.card-body {
@@ -49,7 +60,7 @@ html {
                                                 li {
                                                     list-style: none;
                                                     width: 100%;
-                                                    height: 40px;
+                                                    height: 50px;
                                                     border: solid 1px black;
                                                     position: relative;
                                                     padding: 0;
@@ -84,7 +95,7 @@ html {
                                                 li {
                                                     list-style: none;
                                                     width: 100%;
-                                                    height: 40px;
+                                                    height: 50px;
                                                     border: solid 1px black;
                                                     position: relative;
                                                     padding: 0;
@@ -114,99 +125,102 @@ html {
                             }
                         }
                     }
-                    table#changed-member {
-                        width: 60%;
-                        tbody {
-                            tr.tablebody-tr {
-                                td.batter_num {
-                                    width: 56px;
-                                    font-weight: bold;
-                                }
-                                td.tabledata {
-                                    padding: 0;
-                                    p {
-                                        margin: 0;
-                                        button {
-                                            width: 100%;
-                                            font-size: 25px;
-                                            font-weight: bold;
-                                            padding: 0;
-                                        }
-                                    }
-                                    div.collapsing {
-                                        div.card-body {
-                                            padding: 1px;
-                                            height: 0px !important;
-                                            ul {
-                                                display: flex;
-                                                li {
-                                                    list-style: none;
-                                                    width: 100%;
-                                                    height: 40px;
-                                                    border: solid 1px black;
-                                                    position: relative;
-                                                    padding: 0;
-                                                    p {
-                                                        position: absolute;
-                                                        z-index: 0;
-                                                    }
-                                                    .hitting_result {
-                                                        width: 100%;
-                                                        height: 100%;
-                                                        line-height: 50px;
-                                                        a {
-                                                            display: inline-block;
-                                                            // line-height: 50%;
-                                                            vertical-align: middle;
-                                                            width: 100%;
-                                                            height: 100%;
-                                                            font-weight: bold;
-                                                        }
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                    div.collapse {
-                                        // height: 0px;
-                                        div.card-body {
-                                            padding: 1px;
-                                            ul {
-                                                display: flex;
-                                                li {
-                                                    list-style: none;
-                                                    width: 100%;
-                                                    height: 40px;
-                                                    border: solid 1px black;
-                                                    position: relative;
-                                                    padding: 0;
-                                                    p {
-                                                        position: absolute;
-                                                        z-index: 0;
-                                                    }
-                                                    .hitting_result {
-                                                        width: 100%;
-                                                        height: 100%;
-                                                        line-height: 50px;
-                                                        a {
-                                                            display: inline-block;
-                                                            // line-height: 50%;
-                                                            vertical-align: middle;
-                                                            width: 100%;
-                                                            height: 100%;
-                                                            font-weight: bold;
-                                                        }
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
+                    // table#changed-member {
+                    //     width: 60%;
+                    //     tbody {
+                    //         tr.tablebody-tr {
+                    //             td.batter_num {
+                    //                 width: 56px;
+                    //                 font-weight: bold;
+                    //             }
+                    //             td.tabledata {
+                    //                 padding: 0;
+                    //                 p {
+                    //                     margin: 0;
+                    //                     button {
+                    //                         width: 100%;
+                    //                         font-size: 25px;
+                    //                         font-weight: bold;
+                    //                         padding: 0;
+                    //                     }
+                    //                 }
+                    //                 div.collapsing {
+                    //                     div.card-body {
+                    //                         padding: 1px;
+                    //                         height: 0px !important;
+                    //                         ul {
+                    //                             display: flex;
+                    //                             li {
+                    //                                 list-style: none;
+                    //                                 width: 100%;
+                    //                                 height: 40px;
+                    //                                 border: solid 1px black;
+                    //                                 position: relative;
+                    //                                 padding: 0;
+                    //                                 p {
+                    //                                     position: absolute;
+                    //                                     z-index: 0;
+                    //                                 }
+                    //                                 .hitting_result {
+                    //                                     width: 100%;
+                    //                                     height: 100%;
+                    //                                     line-height: 50px;
+                    //                                     a {
+                    //                                         display: inline-block;
+                    //                                         // line-height: 50%;
+                    //                                         vertical-align: middle;
+                    //                                         width: 100%;
+                    //                                         height: 100%;
+                    //                                         font-weight: bold;
+                    //                                     }
+                    //                                 }
+                    //                             }
+                    //                         }
+                    //                     }
+                    //                 }
+                    //                 div.collapse {
+                    //                     // height: 0px;
+                    //                     div.card-body {
+                    //                         padding: 1px;
+                    //                         ul {
+                    //                             display: flex;
+                    //                             li {
+                    //                                 list-style: none;
+                    //                                 width: 100%;
+                    //                                 height: 40px;
+                    //                                 border: solid 1px black;
+                    //                                 position: relative;
+                    //                                 padding: 0;
+                    //                                 p {
+                    //                                     position: absolute;
+                    //                                     z-index: 0;
+                    //                                 }
+                    //                                 .hitting_result {
+                    //                                     width: 100%;
+                    //                                     height: 100%;
+                    //                                     line-height: 50px;
+                    //                                     a {
+                    //                                         display: inline-block;
+                    //                                         // line-height: 50%;
+                    //                                         vertical-align: middle;
+                    //                                         width: 100%;
+                    //                                         height: 100%;
+                    //                                         font-weight: bold;
+                    //                                     }
+                    //                                 }
+                    //                             }
+                    //                         }
+                    //                     }
+                    //                 }
+                    //             }
+                    //         }
+                    //     }
+                    // }
                     a#historyGameBtn {
-                        float: right;
+                        position: absolute;
+                        width: 100px;
+                        right: 10px;
+                        top: 10px;
                     }
                 }
             }
