--- a/public/stylesheets/style_forIndex.scss
+++ b/public/stylesheets/style_forIndex.scss
@@ -1,9 +1,15 @@
 html {
     body {
-        div.container {
+        background-color: #f4f5f7;
+        div#main {
+            margin: 0;
+            padding: 0;
+            width: 100%;
             div#green-field {
                 // height: 500px;
                 width: 600px;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
                     height: 700px;
                     background-color: #8b4513;
@@ -71,7 +77,7 @@ html {
                     }
                     #historyGameBtn {
                         position: absolute;
-                        top: 600px;
+                        top: 500px;
                         left: 50%;
                         transform: translateY(0) translateX(-50%);
                     }
