--- a/public/stylesheets/style_forIndex_phone.css
+++ b/public/stylesheets/style_forIndex_phone.css
@@ -1,21 +1,43 @@
-html body div.container div#green-field div#brown-field {
-  height: 500px;
-  background-color: #8b4513;
-  border-width: 5px !important;
+html {
+  height: 100%;
 }
 
-html body div.container div#green-field div#brown-field a#logoutBtn {
+html body {
+  height: 100%;
+}
+
+html body div#main {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  height: 100%;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 94%;
+  background-color: #8b4513;
+  border-width: 5px !important;
+  padding: 0;
+}
+
+html body div#main div#green-field div#brown-field a#logoutBtn {
   float: right;
   margin-top: 10px;
 }
 
-html body div.container div#green-field div#brown-field #title {
+html body div#main div#green-field div#brown-field #title {
   position: absolute;
   text-align: center;
   color: #fff;
   width: 90%;
   height: auto;
-  top: 50px;
+  top: 30px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -23,36 +45,36 @@ html body div.container div#green-field div#brown-field #title {
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field #date {
+html body div#main div#green-field div#brown-field #date {
   position: absolute;
   text-align: center;
   color: #fff;
   width: 40%;
   height: auto;
-  top: 150px;
+  top: 130px;
   left: 25%;
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field #vs {
+html body div#main div#green-field div#brown-field #vs {
   position: absolute;
   text-align: center;
   color: #fff;
   width: 40%;
   height: auto;
-  top: 235px;
+  top: 200px;
   left: 17%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field #opponent {
+html body div#main div#green-field div#brown-field #opponent {
   position: absolute;
   text-align: center;
   width: 60%;
   height: auto;
-  top: 210px;
+  top: 180px;
   left: 55%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -60,7 +82,7 @@ html body div.container div#green-field div#brown-field #opponent {
   background-color: #fff;
 }
 
-html body div.container div#green-field div#brown-field h3 {
+html body div#main div#green-field div#brown-field h3 {
   position: absolute;
   top: 290px;
   left: 52%;
@@ -71,18 +93,18 @@ html body div.container div#green-field div#brown-field h3 {
   font-size: 20px;
 }
 
-html body div.container div#green-field div#brown-field #gameStartBtn {
+html body div#main div#green-field div#brown-field #gameStartBtn {
   position: absolute;
   width: 200px;
-  top: 330px;
+  top: 300px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
 }
 
-html body div.container div#green-field div#brown-field #historyGameBtn {
+html body div#main div#green-field div#brown-field #historyGameBtn {
   position: absolute;
-  top: 420px;
+  top: 380px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
