--- a/public/stylesheets/style_forbatterBox.css
+++ b/public/stylesheets/style_forbatterBox.css
@@ -1,20 +1,33 @@
-html body div.container div#green-field {
-  width: 600px;
+html body {
+  background-color: #f4f5f7;
 }
 
-html body div.container div#green-field div#brown-field {
+html body div#main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  width: 600px;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 700px;
   background-color: #8b4513;
   border-width: 5px !important;
+  padding-top: 15px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field {
+html body div#main div#green-field div#brown-field div#white-field {
   height: 600px;
-  width: 90%;
   background-color: #fff;
   position: relative;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #order {
+html body div#main div#green-field div#brown-field div#white-field #order {
   position: absolute;
   width: 33%;
   height: auto;
@@ -23,7 +36,7 @@ html body div.container div#green-field div#brown-field div#white-field #order {
   font-size: xx-large;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #name {
+html body div#main div#green-field div#brown-field div#white-field #name {
   position: absolute;
   text-align: center;
   width: 90%;
@@ -36,7 +49,7 @@ html body div.container div#green-field div#brown-field div#white-field #name {
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #box_count {
+html body div#main div#green-field div#brown-field div#white-field #box_count {
   position: absolute;
   text-align: center;
   width: 40%;
@@ -48,7 +61,7 @@ html body div.container div#green-field div#brown-field div#white-field #box_cou
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #result {
+html body div#main div#green-field div#brown-field div#white-field #result {
   position: absolute;
   text-align: center;
   width: 80%;
@@ -61,7 +74,7 @@ html body div.container div#green-field div#brown-field div#white-field #result 
   background-color: #b0c4de;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #resultEnterBtn {
+html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
   position: absolute;
   top: 400px;
   left: 50%;
@@ -71,46 +84,15 @@ html body div.container div#green-field div#brown-field div#white-field #resultE
           transform: translateY(0) translateX(-50%);
 }
 
-html body div.container div#green-field div#brown-field div#white-field #boxCountList {
+html body div#main div#green-field div#brown-field div#white-field a#back {
   position: absolute;
-  padding: 0;
-  margin: 0;
-  width: 75%;
-  top: 400px;
-  left: 50%;
+  top: 20px;
+  left: 80%;
+  width: 120px;
+  height: 50px;
+  line-height: 200%;
+  font-size: large;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
-  font-size: 25px;
-  list-style: none;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_1 {
-  margin: 5px 0;
-  border: solid 1px #000;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_1 p {
-  display: inline-block;
-  margin: 0;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_2 {
-  margin: 5px 0;
-  border: solid 1px #000;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_2 p {
-  display: inline-block;
-  margin: 0;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_3 {
-  margin: 5px 0;
-  border: solid 1px #000;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #boxCountList #box_count_3 p {
-  display: inline-block;
-  margin: 0;
 }
 /*# sourceMappingURL=style_forbatterBox.css.map */
