--- a/public/stylesheets/style_forbatterBox.scss
+++ b/public/stylesheets/style_forbatterBox.scss
@@ -1,16 +1,23 @@
 html {
     body {
-        div.container {
+        background-color: #f4f5f7;
+        div#main {
+            margin: 0;
+            padding: 0;
+            width: 100%;
             div#green-field {
                 // height: 500px;
                 width: 600px;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    height: 700px;
                     background-color: #8b4513;
                     border-width: 5px !important;
+                    padding-top: 15px;
                     div#white-field {
                         height: 600px;
-                        width: 90%;
+                        // width: 90%;
                         background-color: #fff;
                         position: relative;
                         #order {
@@ -65,42 +72,53 @@ html {
                             border: ridge 2px #000;
                             transform: translateY(0) translateX(-50%);
                         }
-                        #boxCountList {
+                        a#back {
                             position: absolute;
-                            padding: 0;
-                            margin: 0;
-                            width: 75%;
-                            top: 400px;
-                            left: 50%;
+                            top: 20px;
+                            left: 80%;
+                            width: 120px;
+                            height: 50px;
+                            line-height: 200%;
+                            font-size: large;
+                            // border: ridge 2px #000;
                             transform: translateY(0) translateX(-50%);
-                            font-size: 25px;
-                            list-style: none;
-                            // text-align: center;
-                            #box_count_1 {
-                                margin: 5px 0;
-                                border: solid 1px #000;
-                                p {
-                                    display: inline-block;
-                                    margin: 0;
-                                }
-                            }
-                            #box_count_2 {
-                                margin: 5px 0;
-                                border: solid 1px #000;
-                                p {
-                                    display: inline-block;
-                                    margin: 0;
-                                }
-                            }
-                            #box_count_3 {
-                                margin: 5px 0;
-                                border: solid 1px #000;
-                                p {
-                                    display: inline-block;
-                                    margin: 0;
-                                }
-                            }
                         }
+                        // #boxCountList {
+                        //     position: absolute;
+                        //     padding: 0;
+                        //     margin: 0;
+                        //     width: 75%;
+                        //     top: 400px;
+                        //     left: 50%;
+                        //     transform: translateY(0) translateX(-50%);
+                        //     font-size: 25px;
+                        //     list-style: none;
+                        //     // text-align: center;
+                        //     #box_count_1 {
+                        //         margin: 5px 0;
+                        //         border: solid 1px #000;
+                        //         p {
+                        //             display: inline-block;
+                        //             margin: 0;
+                        //         }
+                        //     }
+                        //     #box_count_2 {
+                        //         margin: 5px 0;
+                        //         border: solid 1px #000;
+                        //         p {
+                        //             display: inline-block;
+                        //             margin: 0;
+                        //         }
+                        //     }
+                        //     #box_count_3 {
+                        //         margin: 5px 0;
+                        //         border: solid 1px #000;
+                        //         p {
+                        //             display: inline-block;
+                        //             margin: 0;
+                        //         }
+                        //     }
+                        // }
                     }
                 }
             }
