--- a/public/stylesheets/style_forbatterBox_phone.css
+++ b/public/stylesheets/style_forbatterBox_phone.css
@@ -1,39 +1,52 @@
-html body div.container div#green-field {
-  margin-top: 0;
+html {
+  height: 100%;
 }
 
-html body div.container div#green-field div#brown-field {
+html body {
+  height: 100%;
+}
+
+html body div#main {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  height: 100%;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 94%;
   background-color: #8b4513;
   border-width: 5px !important;
   padding: 0;
 }
 
-html body div.container div#green-field div#brown-field div#white-field {
-  height: 500px;
+html body div#main div#green-field div#brown-field div#white-field {
+  height: 96%;
   background-color: #fff;
   position: relative;
 }
 
-html body div.container div#green-field div#brown-field div#white-field a#logoutBtn {
-  float: right;
-  margin: 10px 10px 0 0;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #order {
+html body div#main div#green-field div#brown-field div#white-field #order {
   position: absolute;
-  width: 33%;
+  width: 50%;
   height: auto;
   top: 15px;
   left: 10px;
   font-size: xx-large;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #name {
+html body div#main div#green-field div#brown-field div#white-field #name {
   position: absolute;
   text-align: center;
   width: 90%;
   height: auto;
-  top: 100px;
+  top: 90px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -41,7 +54,7 @@ html body div.container div#green-field div#brown-field div#white-field #name {
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #box_count {
+html body div#main div#green-field div#brown-field div#white-field #box_count {
   position: absolute;
   text-align: center;
   width: 40%;
@@ -53,11 +66,11 @@ html body div.container div#green-field div#brown-field div#white-field #box_cou
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #result {
+html body div#main div#green-field div#brown-field div#white-field #result {
   position: absolute;
   text-align: center;
   width: 80%;
-  height: auto;
+  height: 70px;
   top: 240px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
@@ -66,7 +79,7 @@ html body div.container div#green-field div#brown-field div#white-field #result 
   background-color: #b0c4de;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #resultEnterBtn {
+html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
   position: absolute;
   top: 350px;
   left: 50%;
@@ -76,10 +89,10 @@ html body div.container div#green-field div#brown-field div#white-field #resultE
           transform: translateY(0) translateX(-50%);
 }
 
-html body div.container div#green-field div#brown-field div#white-field a#back {
+html body div#main div#green-field div#brown-field div#white-field a#back {
   position: absolute;
-  top: 420px;
-  left: 50%;
+  top: 20px;
+  left: 80%;
   width: 80px;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
