--- a/public/stylesheets/style_forbatterBox_phone.scss
+++ b/public/stylesheets/style_forbatterBox_phone.scss
@@ -1,27 +1,30 @@
 html {
+    height: 100%;
     body {
-        div.container {
+        height: 100%;
+        div#main {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             div#green-field {
-                // height: 500px;
+                height: 100%;
                 // width: 600px;
-                margin-top: 0;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    height: 94%;
                     background-color: #8b4513;
                     border-width: 5px !important;
                     padding: 0;
                     div#white-field {
-                        height: 500px;
+                        height: 96%;
                         // width: 90%;
                         background-color: #fff;
                         position: relative;
-                        a#logoutBtn {
-                            float: right;
-                            margin: 10px 10px 0 0;
-                        }
                         #order {
                             position: absolute;
-                            width: 33%;
+                            width: 50%;
                             height: auto;
                             top: 15px;
                             left: 10px;
@@ -33,7 +36,7 @@ html {
                             text-align: center;
                             width: 90%;
                             height: auto;
-                            top: 100px;
+                            top: 90px;
                             left: 50%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 50px;
@@ -55,7 +58,7 @@ html {
                             position: absolute;
                             text-align: center;
                             width: 80%;
-                            height: auto;
+                            height: 70px;
                             top: 240px;
                             left: 50%;
                             transform: translateY(0) translateX(-50%);
@@ -73,8 +76,8 @@ html {
                         }
                         a#back {
                             position: absolute;
-                            top: 420px;
-                            left: 50%;
+                            top: 20px;
+                            left: 80%;
                             width: 80px;
                             // border: ridge 2px #000;
                             transform: translateY(0) translateX(-50%);
