--- a/public/stylesheets/style_forgames_phone.css
+++ b/public/stylesheets/style_forgames_phone.css
@@ -1,24 +1,47 @@
-html body div.container div#green-field {
-  margin-top: 0;
+html {
+  height: 100%;
 }
 
-html body div.container div#green-field div#brown-field {
-  height: 560px;
+html body {
+  height: 100%;
+}
+
+html body div#main {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  height: 100%;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 94%;
   background-color: #8b4513;
   border-width: 5px !important;
+  padding: 0 10px;
 }
 
-html body div.container div#green-field div#brown-field a#logoutBtn {
-  margin: 10px 10px 0 170px;
+html body div#main div#green-field div#brown-field #goHomeBtn {
+  position: absolute;
+  width: 100px;
+  top: 15px;
+  left: 80%;
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container {
-  height: 400px;
-  margin-top: 30px;
+html body div#main div#green-field div#brown-field .list-group #scroll-container {
+  height: 370px;
+  margin-top: 70px;
   overflow: auto;
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
   overflow: hidden;
   padding: 10px 0;
   margin-bottom: 3px;
@@ -27,12 +50,12 @@ html body div.container div#green-field div#brown-field .list-group #scroll-cont
   display: inline-block;
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container a.scroll-item p {
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p {
   position: absolute;
   margin: 0;
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-date {
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-date {
   display: inline-block;
   font-size: 15px;
   width: 20%;
@@ -42,7 +65,7 @@ html body div.container div#green-field div#brown-field .list-group #scroll-cont
           transform: translateY(-50%) translateX(0);
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-vs {
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-vs {
   display: inline-block;
   top: 60%;
   left: 30%;
@@ -50,20 +73,12 @@ html body div.container div#green-field div#brown-field .list-group #scroll-cont
           transform: translateY(-50%) translateX(0);
 }
 
-html body div.container div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-opponent {
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-opponent {
   display: inline-block;
   font-size: 25px;
   top: 55%;
   left: 40%;
   -webkit-transform: translateY(-50%) translateX(0);
           transform: translateY(-50%) translateX(0);
-}
-
-html body div.container div#green-field div#brown-field #goHomeBtn {
-  position: absolute;
-  top: 500px;
-  left: 50%;
-  -webkit-transform: translateY(0) translateX(-50%);
-          transform: translateY(0) translateX(-50%);
 }
 /*# sourceMappingURL=style_forgames_phone.css.map */
