--- a/public/stylesheets/style_forgames_phone.scss
+++ b/public/stylesheets/style_forgames_phone.scss
@@ -1,22 +1,33 @@
 html {
+    height: 100%;
     body {
-        div.container {
+        height: 100%;
+        div#main {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             div#green-field {
-                // height: 500px;
+                height: 100%;
                 // width: 600px;
-                margin-top: 0;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    height: 560px;
+                    height: 94%;
                     background-color: #8b4513;
                     border-width: 5px !important;
-                    a#logoutBtn {
-                        // float: right;
-                        margin: 10px 10px 0 170px;
+                    padding: 0 10px;
+                    #goHomeBtn {
+                        position: absolute;
+                        width: 100px;
+                        top: 15px;
+                        left: 80%;
+                        transform: translateY(0) translateX(-50%);
                     }
                     .list-group {
                         #scroll-container {
-                            height: 400px;
-                            margin-top: 30px;
+                            height: 370px;
+                            margin-top: 70px;
                             overflow: auto;
                             a.scroll-item {
                                 overflow: hidden;
@@ -52,12 +63,6 @@ html {
                                 }
                             }
                         }
-                    }
-                    #goHomeBtn {
-                        position: absolute;
-                        top: 500px;
-                        left: 50%;
-                        transform: translateY(0) translateX(-50%);
                     }
                 }
             }
