--- a/public/stylesheets/style_forplayer.css
+++ b/public/stylesheets/style_forplayer.css
@@ -1,20 +1,33 @@
-html body div.container div#green-field {
-  width: 600px;
+html body {
+  background-color: #f4f5f7;
 }
 
-html body div.container div#green-field div#brown-field {
+html body div#main {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  width: 600px;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 700px;
   background-color: #8b4513;
   border-width: 5px !important;
 }
 
-html body div.container div#green-field div#brown-field div#white-field {
+html body div#main div#green-field div#brown-field div#white-field {
   height: 600px;
   width: 90%;
   background-color: #fff;
   position: relative;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #order_div {
+html body div#main div#green-field div#brown-field div#white-field #order_div {
   position: absolute;
   width: 33%;
   height: auto;
@@ -23,7 +36,7 @@ html body div.container div#green-field div#brown-field div#white-field #order_d
   font-size: xx-large;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #name_div {
+html body div#main div#green-field div#brown-field div#white-field #name_div {
   position: absolute;
   text-align: center;
   width: 90%;
@@ -36,7 +49,7 @@ html body div.container div#green-field div#brown-field div#white-field #name_di
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #name {
+html body div#main div#green-field div#brown-field div#white-field #name {
   position: absolute;
   text-align: center;
   width: 60%;
@@ -48,7 +61,7 @@ html body div.container div#green-field div#brown-field div#white-field #name {
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #position_div {
+html body div#main div#green-field div#brown-field div#white-field #position_div {
   position: absolute;
   text-align: center;
   width: 40%;
@@ -61,7 +74,7 @@ html body div.container div#green-field div#brown-field div#white-field #positio
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #position {
+html body div#main div#green-field div#brown-field div#white-field #position {
   position: absolute;
   text-align: center;
   width: 30%;
@@ -73,12 +86,24 @@ html body div.container div#green-field div#brown-field div#white-field #positio
   font-size: 30px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field #resultEnterBtn {
+html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
   position: absolute;
   top: 400px;
   left: 50%;
   width: 200px;
   border: ridge 2px #000;
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
+}
+
+html body div#main div#green-field div#brown-field div#white-field a#back {
+  position: absolute;
+  top: 20px;
+  left: 80%;
+  width: 120px;
+  height: 50px;
+  line-height: 200%;
+  font-size: large;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
 }
