--- a/public/stylesheets/style_forplayer.scss
+++ b/public/stylesheets/style_forplayer.scss
@@ -1,11 +1,17 @@
 html {
     body {
-        div.container {
+        background-color: #f4f5f7;
+        div#main {
+            margin: 0;
+            padding: 0;
+            width: 100%;
             div#green-field {
                 // height: 500px;
                 width: 600px;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    height: 700px;
                     background-color: #8b4513;
                     border-width: 5px !important;
                     div#white-field {
@@ -72,6 +78,17 @@ html {
                             left: 50%;
                             width: 200px;
                             border: ridge 2px #000;
+                            transform: translateY(0) translateX(-50%);
+                        }
+                        a#back {
+                            position: absolute;
+                            top: 20px;
+                            left: 80%;
+                            width: 120px;
+                            height: 50px;
+                            line-height: 200%;
+                            font-size: large;
+                            // border: ridge 2px #000;
                             transform: translateY(0) translateX(-50%);
                         }
                     }
