--- a/public/stylesheets/style_forplayer_phone.scss
+++ b/public/stylesheets/style_forplayer_phone.scss
@@ -1,24 +1,27 @@
 html {
+    height: 100%;
     body {
-        div.container {
+        height: 100%;
+        div#main {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             div#green-field {
-                // height: 100%;
+                height: 100%;
                 // width: 600px;
-                margin-top: 0;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    height: 94%;
                     background-color: #8b4513;
                     border-width: 5px !important;
                     padding: 0;
                     div#white-field {
-                        height: 500px;
+                        height: 96%;
                         // width: 90%;
                         background-color: #fff;
                         position: relative;
-                        a#logoutBtn {
-                            float: right;
-                            margin: 10px 10px 0 0;
-                        }
                         #order_div {
                             position: absolute;
                             width: 33%;
@@ -33,7 +36,7 @@ html {
                             text-align: center;
                             width: 90%;
                             height: auto;
-                            top: 140px;
+                            top: 130px;
                             left: 20%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 30px;
@@ -45,7 +48,7 @@ html {
                             text-align: center;
                             width: 60%;
                             height: auto;
-                            top: 130px;
+                            top: 120px;
                             left: 65%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 30px;
@@ -55,7 +58,7 @@ html {
                             text-align: center;
                             width: 40%;
                             height: auto;
-                            top: 240px;
+                            top: 210px;
                             left: 20%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 30px;
@@ -67,14 +70,14 @@ html {
                             text-align: center;
                             width: 30%;
                             height: auto;
-                            top: 230px;
+                            top: 200px;
                             left: 50%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 30px;
                         }
                         #resultEnterBtn {
                             position: absolute;
-                            top: 350px;
+                            top: 310px;
                             left: 50%;
                             width: 200px;
                             border: ridge 2px #000;
@@ -82,8 +85,8 @@ html {
                         }
                         a#back {
                             position: absolute;
-                            top: 420px;
-                            left: 50%;
+                            top: 20px;
+                            left: 80%;
                             width: 80px;
                             // border: ridge 2px #000;
                             transform: translateY(0) translateX(-50%);
