--- a/public/stylesheets/style_forregist.css
+++ b/public/stylesheets/style_forregist.css
@@ -1,3 +1,7 @@
+html body {
+  background-color: #f4f5f7;
+}
+
 html body div#main {
   margin: 0;
   padding: 0;
@@ -21,15 +25,14 @@ html body div#main div#green-field div#brown-field div#white-field {
   height: 500px;
   background-color: #fff;
   position: relative;
-  margin: 20px;
 }
 
-html body div#main div#green-field div#brown-field div#white-field #title_login {
+html body div#main div#green-field div#brown-field div#white-field #title_regist {
   position: absolute;
   text-align: center;
   width: 90%;
   height: auto;
-  top: 70px;
+  top: 60px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -37,12 +40,12 @@ html body div#main div#green-field div#brown-field div#white-field #title_login 
   font-weight: bold;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#login_id {
+html body div#main div#green-field div#brown-field div#white-field form input#regist_id {
   position: absolute;
   text-align: center;
   width: 40%;
   height: auto;
-  top: 190px;
+  top: 160px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -51,12 +54,12 @@ html body div#main div#green-field div#brown-field div#white-field form input#lo
   background-color: #dae3f3;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
+html body div#main div#green-field div#brown-field div#white-field form input#regist_pass {
   position: absolute;
   text-align: center;
   width: 40%;
   height: auto;
-  top: 260px;
+  top: 230px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -65,30 +68,30 @@ html body div#main div#green-field div#brown-field div#white-field form input#lo
   background-color: #dae3f3;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
+html body div#main div#green-field div#brown-field div#white-field form input#registBtn {
   position: absolute;
   text-align: center;
   width: 40%;
   height: auto;
   padding: 0;
-  top: 350px;
+  top: 330px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 30px;
 }
 
-html body div#main div#green-field div#brown-field div#white-field a#registBtn {
+html body div#main div#green-field div#brown-field div#white-field a#loginBtn {
   position: absolute;
   text-align: center;
   text-decoration: underline;
   width: 40%;
   height: auto;
   padding: 0;
-  top: 420px;
+  top: 400px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 30px;
 }
-/*# sourceMappingURL=style_login.css.map */
+/*# sourceMappingURL=style_forregist.css.map */
