--- a/public/stylesheets/style_forregist_phone.css
+++ b/public/stylesheets/style_forregist_phone.css
@@ -1,35 +1,55 @@
+html {
+  height: 100%;
+}
+
+html body {
+  height: 100%;
+}
+
 html body div#main {
   margin: 0;
   padding: 0;
+  height: 100%;
   width: 100%;
 }
 
 html body div#main div#green-field {
-  width: 600px;
+  height: 100%;
   padding-top: 60px;
   margin: 0 auto;
 }
 
 html body div#main div#green-field div#brown-field {
-  height: 700px;
+  height: 94%;
   background-color: #8b4513;
   border-width: 5px !important;
   padding: 0;
 }
 
 html body div#main div#green-field div#brown-field div#white-field {
-  height: 500px;
+  height: 94%;
   background-color: #fff;
   position: relative;
-  margin: 20px;
+  margin: 15px;
 }
 
-html body div#main div#green-field div#brown-field div#white-field #title_login {
+html body div#main div#green-field div#brown-field div#white-field h5#error-message {
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
+  text-align: center;
+  color: red;
+}
+
+html body div#main div#green-field div#brown-field div#white-field #title_regist {
   position: absolute;
   text-align: center;
   width: 90%;
   height: auto;
-  top: 70px;
+  top: 40px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -37,58 +57,56 @@ html body div#main div#green-field div#brown-field div#white-field #title_login 
   font-weight: bold;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#login_id {
+html body div#main div#green-field div#brown-field div#white-field form input#regist_id {
   position: absolute;
-  text-align: center;
-  width: 40%;
+  width: 70%;
   height: auto;
-  top: 190px;
+  top: 140px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
-  font-size: 30px;
+  font-size: 25px;
   text-align: left;
   background-color: #dae3f3;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
+html body div#main div#green-field div#brown-field div#white-field form input#regist_pass {
   position: absolute;
-  text-align: center;
-  width: 40%;
+  width: 70%;
   height: auto;
-  top: 260px;
+  top: 210px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
-  font-size: 30px;
+  font-size: 25px;
   text-align: left;
   background-color: #dae3f3;
 }
 
-html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
+html body div#main div#green-field div#brown-field div#white-field form input#registBtn {
   position: absolute;
   text-align: center;
-  width: 40%;
+  width: 70%;
   height: auto;
   padding: 0;
-  top: 350px;
+  top: 300px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 30px;
 }
 
-html body div#main div#green-field div#brown-field div#white-field a#registBtn {
+html body div#main div#green-field div#brown-field div#white-field a#loginBtn {
   position: absolute;
   text-align: center;
   text-decoration: underline;
   width: 40%;
   height: auto;
   padding: 0;
-  top: 420px;
+  top: 360px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 30px;
 }
-/*# sourceMappingURL=style_login.css.map */
+/*# sourceMappingURL=style_forregist_phone.css.map */
