--- a/public/stylesheets/style_login_phone.css
+++ b/public/stylesheets/style_login_phone.css
@@ -1,32 +1,44 @@
-html body div.container div#green-field {
-  margin-top: 0;
+html {
+  height: 100%;
 }
 
-html body div.container div#green-field div#brown-field {
+html body {
+  height: 100%;
+}
+
+html body div#main {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+html body div#main div#green-field {
+  height: 100%;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+html body div#main div#green-field div#brown-field {
+  height: 94%;
   background-color: #8b4513;
   border-width: 5px !important;
   padding: 0;
 }
 
-html body div.container div#green-field div#brown-field div#white-field {
-  height: 450px;
+html body div#main div#green-field div#brown-field div#white-field {
+  height: 94%;
   background-color: #fff;
   position: relative;
+  margin: 15px;
 }
 
-html body div.container div#green-field div#brown-field div#white-field div#warningmessage {
-  background-color: red;
-  color: yellow;
-  font-size: 15px;
-  font-weight: bold;
-}
-
-html body div.container div#green-field div#brown-field div#white-field #title_login {
+html body div#main div#green-field div#brown-field div#white-field #title_login {
   position: absolute;
   text-align: center;
   width: 90%;
   height: auto;
-  top: 60px;
+  top: 40px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -34,34 +46,36 @@ html body div.container div#green-field div#brown-field div#white-field #title_l
   font-weight: bold;
 }
 
-html body div.container div#green-field div#brown-field div#white-field form input#login_name {
+html body div#main div#green-field div#brown-field div#white-field form input#login_id {
   position: absolute;
   width: 70%;
   height: auto;
-  top: 150px;
+  top: 140px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 25px;
   text-align: left;
+  background-color: #dae3f3;
 }
 
-html body div.container div#green-field div#brown-field div#white-field form input#login_pass {
+html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
   position: absolute;
   width: 70%;
   height: auto;
-  top: 230px;
+  top: 210px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
   font-size: 25px;
   text-align: left;
+  background-color: #dae3f3;
 }
 
-html body div.container div#green-field div#brown-field div#white-field form h5#error-message {
+html body div#main div#green-field div#brown-field div#white-field form h5#error-message {
   width: 100%;
   position: absolute;
-  top: 290px;
+  top: 270px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
@@ -69,13 +83,27 @@ html body div.container div#green-field div#brown-field div#white-field form h5#
   color: red;
 }
 
-html body div.container div#green-field div#brown-field div#white-field form input#loginBtn {
+html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
   position: absolute;
   text-align: center;
   width: 70%;
   height: auto;
   padding: 0;
-  top: 320px;
+  top: 300px;
+  left: 50%;
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
+  font-size: 30px;
+}
+
+html body div#main div#green-field div#brown-field div#white-field a#registBtn {
+  position: absolute;
+  text-align: center;
+  text-decoration: underline;
+  width: 40%;
+  height: auto;
+  padding: 0;
+  top: 360px;
   left: 50%;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
