--- a/public/stylesheets/style_login_phone.scss
+++ b/public/stylesheets/style_login_phone.scss
@@ -1,32 +1,34 @@
 html {
+    height: 100%;
     body {
-        div.container {
+        height: 100%;
+        div#main {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
             div#green-field {
-                // height: 500px;
+                height: 100%;
                 // width: 600px;
-                margin-top: 0;
+                padding-top: 60px;
+                margin: 0 auto;
                 div#brown-field {
-                    // height: 80%;
+                    height: 94%;
                     background-color: #8b4513;
                     border-width: 5px !important;
                     padding: 0;
                     div#white-field {
-                        height: 450px;
+                        height: 94%;
                         // width: 90%;
                         background-color: #fff;
                         position: relative;
-                        div#warningmessage {
-                            background-color: red;
-                            color: yellow;
-                            font-size: 15px;
-                            font-weight: bold;
-                        }
+                        margin: 15px;
                         #title_login {
                             position: absolute;
                             text-align: center;
                             width: 90%;
                             height: auto;
-                            top: 60px;
+                            top: 40px;
                             left: 50%;
                             transform: translateY(0) translateX(-50%);
                             font-size: 50px;
@@ -34,30 +36,32 @@ html {
                             // border: solid 1px #bcbcbc;
                         }
                         form {
-                            input#login_name {
+                            input#login_id {
                                 position: absolute;
                                 width: 70%;
                                 height: auto;
-                                top: 150px;
+                                top: 140px;
                                 left: 50%;
                                 transform: translateY(0) translateX(-50%);
                                 font-size: 25px;
                                 text-align: left;
+                                background-color: #dae3f3;
                             }
                             input#login_pass {
                                 position: absolute;
                                 width: 70%;
                                 height: auto;
-                                top: 230px;
+                                top: 210px;
                                 left: 50%;
                                 transform: translateY(0) translateX(-50%);
                                 font-size: 25px;
                                 text-align: left;
+                                background-color: #dae3f3;
                             }
                             h5#error-message {
                                 width: 100%;
                                 position: absolute;
-                                top: 290px;
+                                top: 270px;
                                 left: 50%;
                                 transform: translateY(0) translateX(-50%);
                                 text-align: center;
@@ -69,11 +73,24 @@ html {
                                 width: 70%;
                                 height: auto;
                                 padding: 0;
-                                top: 320px;
+                                top: 300px;
                                 left: 50%;
                                 transform: translateY(0) translateX(-50%);
                                 font-size: 30px;
                             }
+                        }
+                        a#registBtn {
+                            // display: inline-block;
+                            position: absolute;
+                            text-align: center;
+                            text-decoration: underline;
+                            width: 40%;
+                            height: auto;
+                            padding: 0;
+                            top: 360px;
+                            left: 50%;
+                            transform: translateY(0) translateX(-50%);
+                            font-size: 30px;
                         }
                     }
                 }
