--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,47 +12,65 @@
     <!-- <link rel="stylesheet" href="/stylesheets/style_forIndex.css"> -->
     <link rel="stylesheet" href="/stylesheets/style_forIndex.css" media="screen and (min-width:481px)">
     <link rel="stylesheet" href="/stylesheets/style_forIndex_phone.css" media="screen and (max-width:480px)">
+    <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
 
-    <title>Baseball Score</title>
+    <link rel="apple-touch-icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon2.ico">
+
+    <title>Baseball Score | Home</title>
+
+    <!-- アドレスバー等のブラウザのUIを非表示 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- ホーム画面に表示されるアプリ名 -->
+    <meta name="apple-mobile-web-app-title" content="Baseball Score">
+    <!-- ホーム画面に表示されるアプリアイコン -->
+    <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
 </head>
 
 <body>
 
-    <div class="container">
-        <div id="green-field" class="row justify-content-center align-self-center bg-success">
-            <div id="brown-field" class="col border border-white m-4">
-                <a href=/login/logout id="logoutBtn" class="btn btn-primary">ログアウト</a>
-                <form method="post" action="/members">
+    <%- include("components/header"); %>
+
+        <div id="main">
+            <!-- <div class="container"> -->
+            <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
+            <div id="green-field" class="row bg-success">
+                <div id="brown-field" class="col border border-white m-3">
                     <div id="title">Baseball Score</div>
                     <div id="date"></div>
-                    <input type="hidden" id="date_hidden" name="date_hidden"></input>
-                    <div id="vs">VS</div>
-                    <input type="text" id="opponent" class="border border-dark rounded" name="opponent"></input>
-                    <% if(error) {%>
-                        <h3 class="text-center">
-                            <%- error %>
-                        </h3>
-                        <%} %>
-                            <input type="submit" id="gameStartBtn" class="btn btn-warning btn-lg" value="試合開始"></input>
-                </form>
-                <a href=/games_history id="historyGameBtn" class="btn btn-success">過去の成績</a>
+                    <form method="post" action="/members">
+                        <input type="hidden" id="date_hidden" name="date_hidden"></input>
+                        <div id="vs">VS</div>
+                        <input type="text" id="opponent" class="border border-dark rounded" name="opponent"></input>
+                        <% if(error) {%>
+                            <h3 class="text-center">
+                                <%- error %>
+                            </h3>
+                            <%} %>
+                                <input type="submit" id="gameStartBtn" class="btn btn-success btn-lg"
+                                    value="試合開始"></input>
+                    </form>
+                    <a href=/games_history id="historyGameBtn" class="btn btn-secondary">過去の成績</a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="/javascripts/basic3.js"></script>
-    <script src="/javascripts/submit.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+        <script src="/javascripts/basic3.js"></script>
+        <script src="/javascripts/submit.js"></script>
 </body>
 
 </html>
