--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,48 +12,67 @@
     <!-- <link rel="stylesheet" href="/stylesheets/style_forIndex.css"> -->
     <link rel="stylesheet" href="/stylesheets/style_login.css" media="screen and (min-width:481px)">
     <link rel="stylesheet" href="/stylesheets/style_login_phone.css" media="screen and (max-width:480px)">
+    <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
+
+    <link rel="apple-touch-icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon2.ico">
 
     <title>Baseball Score | Login</title>
+
+    <!-- アドレスバー等のブラウザのUIを非表示 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- ホーム画面に表示されるアプリ名 -->
+    <meta name="apple-mobile-web-app-title" content="Baseball Score">
+    <!-- ホーム画面に表示されるアプリアイコン -->
+    <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
 </head>
 
 <body>
 
-    <div class="container">
-        <div id="green-field" class="row justify-content-center align-self-center bg-success">
-            <div id="brown-field" class="col border border-white m-3">
-                <div id="white-field" class="border border-dark rounded m-4">
-                    <div id="warningmessage">You can not register as a user because this service is under developing.
+    <%- include("components/header"); %>
+
+        <div id="main">
+            <!-- <div class="container"> -->
+            <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
+            <div id="green-field" class="row bg-success">
+                <div id="brown-field" class="col border border-white m-3">
+                    <!-- <div id="white-field" class="border border-dark rounded m-4"> -->
+                    <div id="white-field" class="border border-dark rounded">
+                        <div id="title_login">ログイン</div>
+                        <form method="post" action="/login">
+                            <input type="text" id="login_id" name="username" placeholder="ID(E-mail)" required></input>
+                            <input type="password" id="login_pass" name="password" placeholder="Password"
+                                required></input>
+                            <% if(error) {%>
+                                <h5 id="error-message" class="text-center">
+                                    <%- error %>
+                                </h5>
+                                <%} %>
+                                    <input type="submit" id="loginBtn" class="btn btn-success btn-lg"
+                                        value="Log in"></input>
+                        </form>
+                        <a href="/login/regist" id="registBtn">新規登録</a>
                     </div>
-                    <div id="title_login">LOGIN</div>
-                    <form method="post" action="/login">
-                        <input type="text" id="login_name" name="username" placeholder="User"></input>
-                        <input type="password" id="login_pass" name="password" placeholder="Password"></input>
-                        <% if(error) {%>
-                            <h5 id="error-message" class="text-center">
-                                <%- error %>
-                            </h5>
-                            <%} %>
-                                <input type="submit" id="loginBtn" class="btn btn-success btn-lg"
-                                    value="Log in"></input>
-                    </form>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <!-- <script src="/javascripts/basic3.js"></script> -->
-    <script src="/javascripts/submit.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+        <!-- <script src="/javascripts/basic3.js"></script> -->
+        <script src="/javascripts/submit.js"></script>
 </body>
 
 </html>
