--- a/views/player.ejs
+++ b/views/player.ejs
@@ -12,70 +12,77 @@
     <!-- <link rel="stylesheet" href="/stylesheets/style_forplayer.css"> -->
     <link rel="stylesheet" href="/stylesheets/style_forplayer.css" media="screen and (min-width:481px)">
     <link rel="stylesheet" href="/stylesheets/style_forplayer_phone.css" media="screen and (max-width:480px)">
+    <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
 
-    <title>Baseball Score</title>
+    <link rel="apple-touch-icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon2.ico">
+
+    <title>Baseball Score | Player</title>
+
+    <!-- アドレスバー等のブラウザのUIを非表示 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- ホーム画面に表示されるアプリ名 -->
+    <meta name="apple-mobile-web-app-title" content="Baseball Score">
+    <!-- ホーム画面に表示されるアプリアイコン -->
+    <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
 </head>
 
 <body>
 
-    <div class="container">
-        <div id="green-field" class="row justify-content-center align-self-center bg-success">
-            <div id="brown-field" class="col border border-white m-3">
-                <div id="white-field" class="border border-dark rounded m-2">
-                    <a href=/login/logout id="logoutBtn" class="btn btn-primary">ログアウト</a>
+    <%- include("components/header"); %>
 
-                    <!-- <div id="order">打順 : 1</div>
-                    <div id="name">新村一真 #2</div>
-                    <div id="box_count">第四打席</div>
-                    <input class="border border-dark rounded" id="result" value="右邪飛"></input> -->
-                    <!-- <ul id="boxCountList">
-                        <li id="box_count_1">第一打席：&nbsp;&nbsp;<p>左本</p>
-                        </li>
-                        <li id="box_count_2">第二打席：&nbsp;&nbsp;<p>三振</p>
-                        </li>
-                        <li id="box_count_3">第三打席：&nbsp;&nbsp;<p>一ゴロ</p>
-                        </li>
-                    </ul> -->
-                    <div id="order_div">打順 :
-                        <%- playerInfo[0].orderNo %>
+        <div id="main">
+            <!-- <div class="container"> -->
+            <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
+            <div id="green-field" class="row bg-success">
+                <div id="brown-field" class="col border border-white m-3">
+                    <div id="white-field" class="border border-dark rounded m-2">
+
+                        <div id="order_div">打順 :
+                            <%- responseBody.playerInfo[0].orderNo %>
+                        </div>
+
+                        <form action="/change" method="post">
+                            <div id="name_div">名前：</div>
+                            <input id="name" class="border border-dark rounded" name="name" onchange="changeNameFlg()"
+                                value="<%- responseBody.playerInfo[0].playerName %>"></input>
+                            <div id="position_div">守備：
+                                <data id="position_hidden" value='<%- responseBody.playerInfo[0].position %>'
+                                    hidden></data>
+                            </div>
+                            <select name="position" id="position" onchange="changePositionFlg()">
+                            </select>
+
+                            <!-- <input type="hidden" name="_method" value="PUT"> -->
+                            <input id="changeNameFlag" type="hidden" name="changeNameFlag" value=0>
+                            <input id="changePositionFlag" type="hidden" name="changePositionFlag" value=0>
+                            <input id="" type="hidden" name="order" value="<%- responseBody.playerInfo[0].orderNo %> ">
+                            <input id="resultEnterBtn" class="btn btn-success btn-lg" type="submit" value="変更">
+                        </form>
+
+                        <a href="/back" id="back" class="btn btn-warning">戻る</a>
 
                     </div>
-
-                    <form action="/change" method="post">
-                        <div id="name_div">名前：</div>
-                        <input id="name" class="border border-dark rounded" name="name" onchange="changeNameFlg()"
-                            value="<%- playerInfo[0].playerName %>"></input>
-                        <div id="position_div">守備：
-                            <data id="position_hidden" value='<%- playerInfo[0].position %>' hidden></data>
-                        </div>
-                        <select name="position" id="position" onchange="changePositionFlg()">
-                        </select>
-
-                        <!-- <input type="hidden" name="_method" value="PUT"> -->
-                        <input id="changeNameFlag" type="hidden" name="changeNameFlag" value=0>
-                        <input id="changePositionFlag" type="hidden" name="changePositionFlag" value=0>
-                        <input id="" type="hidden" name="order" value="<%- playerInfo[0].orderNo %> ">
-                        <input id="resultEnterBtn" class="btn btn-warning btn-lg" type="submit" value="変更">
-                    </form>
-                    <a href="/back" id="back" class="btn btn-primary">戻る</a>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="/javascripts/submit.js"></script>
-    <script src="/javascripts/basic5.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+        <script src="/javascripts/submit.js"></script>
+        <script src="/javascripts/basic5.js"></script>
 </body>
 
 </html>
