--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -9,16 +9,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/stylesheets/style_forgames.css"> -->
-    <link rel="stylesheet" href="/stylesheets/style_forgames.css" media="screen and (min-width:481px)">
-    <link rel="stylesheet" href="/stylesheets/style_forgames_phone.css" media="screen and (max-width:480px)">
+    <!-- <link rel="stylesheet" href="/stylesheets/style_forIndex.css"> -->
+    <link rel="stylesheet" href="/stylesheets/style_forregist.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/style_forregist_phone.css" media="screen and (max-width:480px)">
     <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
     <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
 
     <link rel="apple-touch-icon" href="/images/favicon.ico">
     <link rel="icon" href="/images/favicon2.ico">
 
-    <title>Baseball Score | History</title>
+    <title>Baseball Score | Registeration</title>
 
     <!-- アドレスバー等のブラウザのUIを非表示 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -39,16 +39,27 @@
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row bg-success">
                 <div id="brown-field" class="col border border-white m-3">
-                    <div class="list-group">
-                        <div id="scroll-container">
-                            <% responseBody.gamesList.forEach(element=> { %>
-                                <%- include("components/pastGames", {element : element}); %>
-                                    <% }) %>
-                        </div>
+                    <!-- <div id="white-field" class="border border-dark rounded m-4"> -->
+                    <div id="white-field" class="border border-dark rounded">
+                        <% if(error) {%>
+                            <h5 id="error-message" class="text-center">
+                                <%- error %>
+                            </h5>
+                            <%} %>
+                                <div id="title_regist">新規登録</div>
+                                <form method="post" action="/login/signup">
+                                    <input type="email" id="regist_id" name="userId" placeholder="ID(E-mail)"
+                                        required></input>
+                                    <input type="password" id="regist_pass" name="password" placeholder="Password"
+                                        required pattern="^[a-zA-Z0-9]+$"></input>
+                                    <input type="submit" id="registBtn" class="btn btn-warning btn-lg"
+                                        value="サインアップ"></input>
+                                </form>
+                                <a href="/login" id="loginBtn">ログイン</a>
                     </div>
-                    <a href="/" id="goHomeBtn" class="btn btn-warning">HOME</a>
                 </div>
             </div>
+        </div>
         </div>
 
         <!-- Optional JavaScript -->
@@ -62,8 +73,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="/javascripts/basic4.js"></script>
-        <!-- <script src="js/submit.js"></script> -->
+        <!-- <script src="/javascripts/basic3.js"></script> -->
+        <script src="/javascripts/submit.js"></script>
 </body>
 
 </html>
