--- a/views/regist_message.ejs
+++ b/views/regist_message.ejs
@@ -9,9 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style_forbatterBox.css">/
+    <!-- <link rel="stylesheet" href="/stylesheets/style_forIndex.css"> -->
+    <link rel="stylesheet" href="/stylesheets/style_login.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/style_login_phone.css" media="screen and (max-width:480px)">
+    <link rel="apple-touch-icon" href="/images/favicon.ico">
 
-    <title>Baseball Score</title>
+    <title>Baseball Score | Login</title>
 
     <!-- アドレスバー等のブラウザのUIを非表示 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +29,15 @@
 <body>
 
     <div class="container">
-        <h1>Failed to load file...</h1>
+        <div id="green-field" class="row justify-content-center align-self-center bg-success">
+            <div id="brown-field" class="col border border-white m-3">
+                <div id="white-field" class="border border-dark rounded m-4">
+                    <div id="registMessage">認証メールを送信しました。<br>
+                        メール内のリンクをクリックして登録を完了してください。
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -40,8 +51,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <!-- <script src="/javascripts/basic2.js"></script> -->
-    <!-- <script src="js/submit.js"></script> -->
+    <!-- <script src="/javascripts/basic3.js"></script> -->
 </body>
 
 </html>
