--- a/views/scorebook.ejs
+++ b/views/scorebook.ejs
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="ja">
 
 <head>
@@ -11,70 +12,90 @@
     <!-- <link rel="stylesheet" href="/stylesheets/style2.css"> -->
     <link rel="stylesheet" href="/stylesheets/style2.css" media="screen and (min-width:481px)">
     <link rel="stylesheet" href="/stylesheets/style2_phone.css" media="screen and (max-width:480px)">
-    <title>Baseball Score</title>
+    <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
+    <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
+
+    <link rel="apple-touch-icon" href="/images/favicon.ico">
+    <link rel="icon" href="/images/favicon2.ico">
+
+    <title>Baseball Score | Socre</title>
+
+    <!-- アドレスバー等のブラウザのUIを非表示 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- ホーム画面に表示されるアプリ名 -->
+    <meta name="apple-mobile-web-app-title" content="Baseball Score">
+    <!-- ホーム画面に表示されるアプリアイコン -->
+    <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
 </head>
 
 <body>
-    <div class="container">
-        <div id="green-field" class="row justify-content-center align-self-center bg-success">
-            <div id="brown-field" class="col border border-white m-4">
-                <a href=/login/logout id="logoutBtn" class="btn btn-primary">ログアウト</a>
-                <h2>Socre Book</h2>
-                <h3>Playing member</h3>
-                <table id="playing-member" class="table table-light">
-                    <thead class="thead-dark text-center">
-                        <tr id="tablehead-tr">
-                            <th scope="col">打順</th>
-                            <th scope="col">氏名</th>
-                        </tr>
-                    </thead>
-                    <tbody>
 
-                        <% playersList.forEach((element,index)=> { %>
-                            <% if(element.order> 0){ %>
+    <%- include("components/header"); %>
 
-                                <%- include("components/batter_2", { player : element, index:index}); %>
-                                    <% } %>
-                                        <% }); %>
+        <div id="main">
+            <!-- <div class="container"> -->
+            <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
+            <div id="green-field" class="row bg-success">
+                <div id="brown-field" class="col border border-white m-3">
+                    <h2>Socre Book</h2>
+                    <h3>Playing member</h3>
+                    <table id="playing-member" class="table table-light">
+                        <thead class="thead-dark text-center">
+                            <tr id="tablehead-tr">
+                                <th scope="col">打順</th>
+                                <th scope="col">氏名</th>
+                            </tr>
+                        </thead>
+                        <tbody>
 
-                    </tbody>
-                </table>
+                            <% responseBody.playersList.forEach((element,index)=> { %>
+                                <% if(element.order> 0){ %>
 
-                <% if(playersList.find(element=> element.order < 0)){ %>
-                        <h4>Changed member</h4>
-                        <table id="changed-member" class="table table-light">
-                            <thead class="thead-dark text-center">
-                                <tr id="tablehead2-tr">
-                                    <th scope="col">氏名</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% playersList.forEach((element,index)=> { %>
-                                    <% if(element.order <=0){ %>
-                                        <%- include("components/batter_changed", { player : element, index:index}); %>
-                                            <% }; %>
-                                                <% }); %>
-                            </tbody>
-                        </table>
-                        <% }; %>
-                            <a href=/games_history id="historyGameBtn" class="btn btn-success">試合終了</a>
+                                    <%- include("components/batter_2", { player : element, index:index}); %>
+                                        <% } %>
+                                            <% }); %>
+
+                        </tbody>
+                    </table>
+
+                    <% if(responseBody.playersList.find(element=> element.order < 0)){ %>
+                            <h4>Changed member</h4>
+                            <table id="changed-member" class="table table-light">
+                                <thead class="thead-dark text-center">
+                                    <tr id="tablehead2-tr">
+                                        <th scope="col">氏名</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% responseBody.playersList.forEach((element,index)=> { %>
+                                        <% if(element.order <=0){ %>
+                                            <%- include("components/batter_changed", { player : element, index :
+                                                index});%>
+                                                <% } %>
+                                                    <% }); %>
+                                </tbody>
+                            </table>
+                            <% }; %>
+                                <a href=/games_history id="historyGameBtn" class="btn btn-warning">試合一覧</a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <!-- <script src="/javascripts/basic2.js"></script> -->
-    <script src="/javascripts/submit.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+        <!-- <script src="/javascripts/basic2.js"></script> -->
+        <script src="/javascripts/submit.js"></script>
 
 
 </body>
