--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/stylesheets/style_forIndex.css"> -->
     <link rel="stylesheet" href="/stylesheets/style_forIndex.css" media="screen and (min-width:481px)">
-    <link rel="stylesheet" href="/stylesheets/style_forIndex_phone.css" media="screen and (max-width:480px)">
+    <link rel="stylesheet" href="/stylesheets_mobile/style_forIndex_phone.css" media="screen and (max-width:480px)">
     <link rel="stylesheet" href="/stylesheets/header.css" media="screen and (min-width:481px)">
-    <link rel="stylesheet" href="/stylesheets/header_phone.css" media="screen and (max-width:480px)">
+    <link rel="stylesheet" href="/stylesheets_mobile/header_phone.css" media="screen and (max-width:480px)">
 
     <link rel="apple-touch-icon" href="/images/favicon.ico">
     <link rel="icon" href="/images/favicon2.ico">
@@ -50,8 +49,7 @@
                                 <%- error %>
                             </h3>
                             <%} %>
-                                <input type="submit" id="gameStartBtn" class="btn btn-success btn-lg"
-                                    value="試合開始"></input>
+                                <input type="submit" id="gameStartBtn" class="btn btn-success btn-lg" value="試合開始"></input>
                     </form>
                     <a href=/games_history id="historyGameBtn" class="btn btn-secondary">過去の成績</a>
                 </div>
@@ -60,15 +58,9 @@
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="/javascripts/basic3.js"></script>
         <script src="/javascripts/submit.js"></script>
 </body>
