--- a/public/stylesheets/style_forIndex.css
+++ b/public/stylesheets/style_forIndex.css
@@ -87,28 +87,53 @@ html body div#main div#green-field div#brown-field #title {
   }
 }
 
-html body div#main div#green-field div#brown-field #date {
-  position: absolute;
-  text-align: center;
-  color: #fff;
-  width: 40%;
-  height: auto;
+html body div#main div#green-field div#brown-field #date_label {
+  position: relative;
+  display: inline-block;
+  border: 2px solid #ccc;
+  border-radius: 15px;
 }
 
 @media screen and (min-width: 481px) {
-  html body div#main div#green-field div#brown-field #date {
-    top: 230px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 40px;
+  html body div#main div#green-field div#brown-field #date_label {
+    width: 300px;
+    height: 60px;
+    top: 220px;
+    left: 25%;
   }
 }
 
 @media screen and (max-width: 480px) {
-  html body div#main div#green-field div#brown-field #date {
+  html body div#main div#green-field div#brown-field #date_label {
+    width: 200px;
+    height: 45px;
     top: 130px;
     left: 25%;
+  }
+}
+
+html body div#main div#green-field div#brown-field #date_input {
+  position: relative;
+  padding: 0 10px;
+  border: 0;
+  background: transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #fff;
+}
+
+@media screen and (min-width: 481px) {
+  html body div#main div#green-field div#brown-field #date_input {
+    width: 300px;
+    height: 50px;
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  html body div#main div#green-field div#brown-field #date_input {
+    width: 200px;
+    height: 40px;
     font-size: 30px;
   }
 }
@@ -181,7 +206,7 @@ html body div#main div#green-field div#brown-field h3 {
 
 @media screen and (max-width: 480px) {
   html body div#main div#green-field div#brown-field h3 {
-    top: 290px;
+    top: 255px;
     left: 52%;
     font-size: 20px;
   }
