Change "Baseball Score" to "Batting Result"

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,14 +14,14 @@
     <!-- <link rel="apple-touch-icon" href="/images/favicon.ico">
     <link rel="icon" href="/images/favicon2.ico"> -->
 
-    <title>Baseball Score | Home</title>
+    <title>Batting Results | Home</title>
 
     <!-- アドレスバー等のブラウザのUIを非表示 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- ホーム画面に表示されるアプリ名 -->
-    <meta name="apple-mobile-web-app-title" content="Baseball Score">
+    <meta name="apple-mobile-web-app-title" content="Batting Results">
     <!-- ホーム画面に表示されるアプリアイコン -->
     <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
 </head>
@@ -35,7 +35,7 @@
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row bg-success">
                 <div id="brown-field" class="col border border-white m-3">
-                    <div id="title">Baseball Score</div>
+                    <div id="title">Batting Results</div>
                     <form method="post" action="/members">
                         <input type="hidden" id="date_hidden" name="date_hidden"></input>
                         <label id="date_label">
