--- a/views/batterBox.ejs
+++ b/views/batterBox.ejs
@@ -14,7 +14,7 @@
     <!-- <link rel="apple-touch-icon" href="/images/favicon.ico">
     <link rel="icon" href="/images/favicon2.ico"> -->
 
-    <title>Baseball Score | BatterBox</title>
+    <title>Batting Results | BatterBox</title>
 
 </head>
 
