--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -14,7 +14,7 @@
     <!-- <link rel="apple-touch-icon" href="/images/favicon.ico">
     <link rel="icon" href="/images/favicon2.ico"> -->
 
-    <title>Baseball Score | Registeration</title>
+    <title>Batting Results | Registeration</title>
 
 </head>
 
