--- a/views/components/batter_2.ejs
+++ b/views/components/batter_2.ejs
@@ -4,9 +4,8 @@
     </td>
     <td class="tabledata">
         <p>
-            <button class="btn" type="button" data-toggle="collapse" data-target="#collapse<%- player.order %>"
-                aria-expanded="false" aria-controls="collapse">
-                <div id="name_<%- player.order %>" class="batter_name text-center">
+            <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%- player.order %>" aria-expanded="false" aria-controls="collapse">
+                <div id="name_<%- player.order %>" class="batter_name text-start">
                     <%- player.name %>
                 </div>
             </button>
@@ -27,13 +26,10 @@
                                                 <% boxArrMod.push(""); %>
                                                     <% boxArrMod.forEach((element,index)=> { %>
                                                         <li class="list-group-item">
-                                                            <p>第<%- index+1 %>打席</p>
-                                                            <div id="box_<%- player.order %>-<%- index+1 %>"
-                                                                class="hitting_result">
-                                                                <a id="<%- player.order %>-<%- index+1 %>"
-                                                                    class="text-center"
-                                                                    href="/batterBox?boxId=<%- player.order %>-<%- index+1 %>"
-                                                                    onclick="getBoxResult(event)">
+                                                            <p>第
+                                                                <%- index+1 %>打席</p>
+                                                            <div id="box_<%- player.order %>-<%- index+1 %>" class="hitting_result">
+                                                                <a id="<%- player.order %>-<%- index+1 %>" class="text-center" href="/batterBox?boxId=<%- player.order %>-<%- index+1 %>" onclick="getBoxResult(event)">
                                                                     <%- element %>
                                                                 </a>
                                                             </div>
