--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -32,7 +32,7 @@ header div#header_container div#userId_info {
 @media screen and (max-width: 480px) {
   header div#header_container div#userId_info {
     top: 20px;
-    left: 10px;
+    left: 4px;
   }
 }
 
@@ -51,18 +51,23 @@ header div#header_container div#userId_info p {
 header div#header_container a#logoutBtn {
   position: absolute;
   text-align: center;
-  top: 10px;
+  font-weight: bold;
 }
 
 @media screen and (min-width: 481px) {
   header div#header_container a#logoutBtn {
+    top: 10px;
     left: 80%;
+    width: 100px;
   }
 }
 
 @media screen and (max-width: 480px) {
   header div#header_container a#logoutBtn {
+    top: 15px;
     left: 43%;
+    width: 100px;
+    font-size: smaller;
   }
 }
 /*# sourceMappingURL=header.css.map */
