--- a/public/stylesheets/style_forbatterBox.css
+++ b/public/stylesheets/style_forbatterBox.css
@@ -1,197 +1,206 @@
 @media screen and (max-width: 480px) {
-  html {
-    height: 100%;
-  }
+    html {
+        height: 100%;
+    }
 }
 
 html body {
-  background-color: #f4f5f7;
+    background-color: #f4f5f7;
 }
 
 @media screen and (max-width: 480px) {
-  html body {
-    height: 100%;
-  }
+    html body {
+        height: 100%;
+    }
 }
 
 html body div#main {
-  margin: 0;
-  padding: 0;
-  width: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 @media screen and (max-width: 480px) {
-  html body div#main {
-    height: 100%;
-  }
+    html body div#main {
+        height: 100%;
+    }
 }
 
 html body div#main div#green-field {
-  padding-top: 60px;
-  margin: 0 auto;
+    padding-top: 60px;
+    margin: 0 auto;
+    background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
-  html body div#main div#green-field {
-    width: 600px;
-  }
+    html body div#main div#green-field {
+        width: 600px;
+    }
 }
 
 @media screen and (max-width: 480px) {
-  html body div#main div#green-field {
-    height: 100%;
-  }
+    html body div#main div#green-field {
+        height: 100%;
+    }
 }
 
 html body div#main div#green-field div#brown-field {
-  background-color: #8b4513;
-  border-width: 5px !important;
+    background-color: #cc6633;
+    border-width: 5px !important;
 }
 
 @media screen and (min-width: 481px) {
-  html body div#main div#green-field div#brown-field {
-    height: 700px;
-    padding-top: 15px;
-  }
-  html body div#main div#green-field div#brown-field div#white-field {
-    height: 96%;
-    background-color: #fff;
-    position: relative;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #order {
-    position: absolute;
-    width: 33%;
-    height: auto;
-    top: 15px;
-    left: 10px;
-    font-size: xx-large;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #name {
-    position: absolute;
-    text-align: center;
-    width: 90%;
-    height: auto;
-    top: 100px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 50px;
-    font-weight: bold;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #box_count {
-    position: absolute;
-    text-align: center;
-    width: 40%;
-    height: auto;
-    top: 200px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 30px;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #result {
-    position: absolute;
-    text-align: center;
-    width: 80%;
-    height: auto;
-    top: 290px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 40px;
-    background-color: #b0c4de;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
-    position: absolute;
-    top: 400px;
-    left: 50%;
-    width: 200px;
-    border: ridge 2px #000;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-  }
-  html body div#main div#green-field div#brown-field div#white-field a#back {
-    position: absolute;
-    top: 20px;
-    left: 80%;
-    width: 120px;
-    height: 50px;
-    line-height: 200%;
-    font-size: large;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-  }
+    html body div#main div#green-field div#brown-field {
+        height: 700px;
+        padding-top: 15px;
+    }
+    html body div#main div#green-field div#brown-field div#white-field {
+        height: 96%;
+        background-color: #fff;
+        position: relative;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #order {
+        position: absolute;
+        width: 33%;
+        height: auto;
+        top: 15px;
+        left: 10px;
+        font-size: xx-large;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #name {
+        position: absolute;
+        text-align: center;
+        width: 90%;
+        height: auto;
+        top: 100px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 50px;
+        font-weight: bold;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #box_count {
+        position: absolute;
+        text-align: center;
+        width: 40%;
+        height: auto;
+        top: 200px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 30px;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #result {
+        position: absolute;
+        text-align: center;
+        width: 80%;
+        height: auto;
+        top: 290px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 40px;
+        background-color: #b0c4de;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
+        position: absolute;
+        top: 400px;
+        left: 50%;
+        width: 200px;
+        border: ridge 2px #000;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+    }
+    html body div#main div#green-field div#brown-field div#white-field a#back {
+        position: absolute;
+        display: inline-block;
+        -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        top: 20px;
+        left: 80%;
+        width: 120px;
+        height: 50px;
+        line-height: 200%;
+        font-size: large;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+    }
 }
 
 @media screen and (max-width: 480px) {
-  html body div#main div#green-field div#brown-field {
-    height: 94%;
-    padding: 0;
-  }
-  html body div#main div#green-field div#brown-field div#white-field {
-    height: 96%;
-    background-color: #fff;
-    position: relative;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #order {
-    position: absolute;
-    width: 50%;
-    height: auto;
-    top: 15px;
-    left: 10px;
-    font-size: xx-large;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #name {
-    position: absolute;
-    text-align: center;
-    width: 90%;
-    height: auto;
-    top: 90px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 50px;
-    font-weight: bold;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #box_count {
-    position: absolute;
-    text-align: center;
-    width: 40%;
-    height: auto;
-    top: 190px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 30px;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #result {
-    position: absolute;
-    text-align: center;
-    width: 80%;
-    height: 70px;
-    top: 240px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-    font-size: 40px;
-    background-color: #b0c4de;
-  }
-  html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
-    position: absolute;
-    top: 350px;
-    left: 50%;
-    width: 200px;
-    border: ridge 2px #000;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-  }
-  html body div#main div#green-field div#brown-field div#white-field a#back {
-    position: absolute;
-    top: 20px;
-    left: 80%;
-    width: 80px;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
-  }
+    html body div#main div#green-field div#brown-field {
+        height: 94%;
+        padding: 0;
+    }
+    html body div#main div#green-field div#brown-field div#white-field {
+        height: 96%;
+        background-color: #fff;
+        position: relative;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #order {
+        position: absolute;
+        width: 50%;
+        height: auto;
+        top: 15px;
+        left: 10px;
+        font-size: xx-large;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #name {
+        position: absolute;
+        text-align: center;
+        width: 90%;
+        height: auto;
+        top: 90px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 50px;
+        font-weight: bold;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #box_count {
+        position: absolute;
+        text-align: center;
+        width: 40%;
+        height: auto;
+        top: 190px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 30px;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #result {
+        position: absolute;
+        text-align: center;
+        width: 80%;
+        height: 70px;
+        top: 240px;
+        left: 50%;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+        font-size: 40px;
+        background-color: #b0c4de;
+    }
+    html body div#main div#green-field div#brown-field div#white-field #resultEnterBtn {
+        position: absolute;
+        top: 350px;
+        left: 50%;
+        width: 200px;
+        border: ridge 2px #000;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+    }
+    html body div#main div#green-field div#brown-field div#white-field a#back {
+        position: absolute;
+        display: inline-block;
+        -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        top: 20px;
+        left: 80%;
+        width: 80px;
+        -webkit-transform: translateY(0) translateX(-50%);
+        transform: translateY(0) translateX(-50%);
+    }
 }
+
+
 /*# sourceMappingURL=style_forbatterBox.css.map */
