--- a/public/stylesheets/style_forgames.css
+++ b/public/stylesheets/style_forgames.css
@@ -29,6 +29,7 @@ html body div#main {
 html body div#main div#green-field {
   padding-top: 60px;
   margin: 0 auto;
+  background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
@@ -44,7 +45,7 @@ html body div#main div#green-field {
 }
 
 html body div#main div#green-field div#brown-field {
-  background-color: #8b4513;
+  background-color: #cc6633;
   border-width: 5px !important;
 }
 
@@ -69,7 +70,7 @@ html body div#main div#green-field div#brown-field {
   html body div#main div#green-field div#brown-field #goHomeBtn {
     position: absolute;
     width: 100px;
-    top: 15px;
+    top: 90px;
     left: 80%;
     -webkit-transform: translateY(0) translateX(-50%);
             transform: translateY(0) translateX(-50%);
