--- a/public/stylesheets/style_forplayer.css
+++ b/public/stylesheets/style_forplayer.css
@@ -29,6 +29,7 @@ html body div#main {
 html body div#main div#green-field {
   padding-top: 60px;
   margin: 0 auto;
+  background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
@@ -44,7 +45,7 @@ html body div#main div#green-field {
 }
 
 html body div#main div#green-field div#brown-field {
-  background-color: #8b4513;
+  background-color: #cc6633;
   border-width: 5px !important;
 }
 
@@ -123,6 +124,9 @@ html body div#main div#green-field div#brown-field {
   }
   html body div#main div#green-field div#brown-field div#white-field a#back {
     position: absolute;
+    display: inline-block;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     top: 20px;
     left: 80%;
     width: 120px;
@@ -209,6 +213,9 @@ html body div#main div#green-field div#brown-field {
   }
   html body div#main div#green-field div#brown-field div#white-field a#back {
     position: absolute;
+    display: inline-block;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     top: 20px;
     left: 80%;
     width: 80px;
