--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style_forIndex.css">
     <link rel="stylesheet" href="/stylesheets/header.css">
 
@@ -33,8 +33,8 @@
         <div id="main">
             <!-- <div class="container"> -->
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
-            <div id="green-field" class="row bg-success">
-                <div id="brown-field" class="col border border-white m-3">
+            <div id="green-field" class="row">
+                <div id="brown-field" class="col border border-white rounded-3 m-3">
                     <div id="title">Batting Results</div>
                     <form method="post" action="/members">
                         <input type="hidden" id="date_hidden" name="date_hidden"></input>
@@ -42,15 +42,15 @@
                             <input type="date" id="date_input" name="date_input"></input>
                         </label>
                         <div id="vs">VS</div>
-                        <input type="text" id="opponent" class="border border-dark rounded" name="opponent"></input>
+                        <input type="text" id="opponent" class="border border-dark rounded form-control" name="opponent" placeholder="Opponent"></input>
                         <% if(error) {%>
                             <h3 class="text-center">
                                 <%- error %>
                             </h3>
                             <%} %>
-                                <input type="submit" id="gameStartBtn" class="btn btn-success btn-lg" value="試合開始"></input>
+                                <input type="submit" id="gameStartBtn" class="btn shadow" value="試合開始"></input>
                     </form>
-                    <a href=/games_history id="historyGameBtn" class="btn btn-secondary">過去の成績</a>
+                    <a href=/games_history id="historyGameBtn" class="btn btn-light shadow">過去の成績</a>
                 </div>
             </div>
         </div>
@@ -58,8 +58,8 @@
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         <script src="/javascripts/basic3.js"></script>
         <script src="/javascripts/submit.js"></script>
 </body>
