試合一覧取得＆選手ポジション変更のロジック修正

--- a/views/components/pastGames.ejs
+++ b/views/components/pastGames.ejs
@@ -1,4 +1,4 @@
-<a href="/scorebook/<%-element.gameId %>" class="scroll-item list-group-item list-group-item-action rounded">
+<a href="/scorebook/<%-element.id %>" class="scroll-item list-group-item list-group-item-action rounded">
     <p class="p-date">
         <%-element.date %>
     </p>
