--- a/views/player.ejs
+++ b/views/player.ejs
@@ -43,8 +43,8 @@
                             </select>
 
                             <!-- <input type="hidden" name="_method" value="PUT"> -->
-                            <input id="changeNameFlag" type="hidden" name="changeNameFlag" value=0>
-                            <input id="changePositionFlag" type="hidden" name="changePositionFlag" value=0>
+                            <input id="changeNameFlag" type="hidden" name="changeNameFlag" value=false>
+                            <input id="changePositionFlag" type="hidden" name="changePositionFlag" value=false>
                             <input id="" type="hidden" name="order" value="<%- responseBody.playerInfo[0].orderNo %> ">
                             <input id="resultEnterBtn" class="btn btn-success btn-lg" type="submit" value="変更">
                         </form>
