--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="/stylesheets/style_login.css">
     <link rel="stylesheet" href="/stylesheets/header.css">
 
-    <!-- <link rel="apple-touch-icon" href="/images/favicon.ico">
-    <link rel="icon" href="/images/favicon2.ico"> -->
+    <!--/* pwa */-->
+    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest" />
+    <script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
+    <meta name="theme-color" content="#0aa574">
 
     <title>Batting Results | Login</title>
 
