--- a/public/stylesheets/style_login.css
+++ b/public/stylesheets/style_login.css
@@ -1,226 +1,224 @@
 @media screen and (max-width: 480px) {
-    html {
-        height: 100%;
-    }
+  html {
+    height: 100%;
+  }
 }
 
 html body {
-    background-color: #f4f5f7;
+  background-color: #f4f5f7;
 }
 
 @media screen and (max-width: 480px) {
-    html body {
-        height: 100%;
-    }
+  html body {
+    height: 100%;
+  }
 }
 
 html body div#main {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 @media screen and (max-width: 480px) {
-    html body div#main {
-        height: 100%;
-    }
+  html body div#main {
+    height: 100%;
+  }
 }
 
 html body div#main div#green-field {
-    padding-top: 60px;
-    margin: 0 auto;
-    background-color: #99cc33;
+  padding-top: 60px;
+  margin: 0 auto;
+  background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
-    html body div#main div#green-field {
-        width: 600px;
-    }
+  html body div#main div#green-field {
+    width: 600px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    html body div#main div#green-field {
-        height: 100%;
-    }
+  html body div#main div#green-field {
+    height: 100%;
+  }
 }
 
 html body div#main div#green-field div#brown-field {
-    background-color: #cc6633;
-    border-width: 5px !important;
-    padding: 0;
+  background-color: #8b4513;
+  border-width: 5px !important;
+  padding: 0;
 }
 
 @media screen and (min-width: 481px) {
-    html body div#main div#green-field div#brown-field {
-        height: 700px;
-    }
+  html body div#main div#green-field div#brown-field {
+    height: 700px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    html body div#main div#green-field div#brown-field {
-        height: 94%;
-    }
+  html body div#main div#green-field div#brown-field {
+    height: 94%;
+  }
 }
 
 html body div#main div#green-field div#brown-field div#white-field {
-    height: 94%;
-    background-color: #fff;
-    position: relative;
+  height: 94%;
+  background-color: #fff;
+  position: relative;
 }
 
 @media screen and (min-width: 481px) {
-    html body div#main div#green-field div#brown-field div#white-field {
-        margin: 20px;
-    }
-    html body div#main div#green-field div#brown-field div#white-field #title_login {
-        position: absolute;
-        text-align: center;
-        width: 90%;
-        height: auto;
-        top: 70px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 50px;
-        font-weight: bold;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#login_id {
-        position: absolute;
-        width: 40%;
-        height: auto;
-        top: 190px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-        text-align: left;
-        background-color: #dae3f3;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
-        position: absolute;
-        width: 40%;
-        height: auto;
-        top: 260px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-        text-align: left;
-        background-color: #dae3f3;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form h5#error-message {
-        width: 100%;
-        position: absolute;
-        top: 315px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        text-align: center;
-        color: red;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
-        position: absolute;
-        text-align: center;
-        top: 400px;
-        height: auto;
-        padding: 0;
-        width: 40%;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-    }
-    html body div#main div#green-field div#brown-field div#white-field a#registBtn {
-        position: absolute;
-        text-align: center;
-        text-decoration: underline;
-        width: 40%;
-        height: auto;
-        padding: 0;
-        top: 470px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-    }
+  html body div#main div#green-field div#brown-field div#white-field {
+    margin: 20px;
+  }
+  html body div#main div#green-field div#brown-field div#white-field #title_login {
+    position: absolute;
+    text-align: center;
+    width: 90%;
+    height: auto;
+    top: 70px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 50px;
+    font-weight: bold;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#login_id {
+    position: absolute;
+    width: 40%;
+    height: auto;
+    top: 190px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+    text-align: left;
+    background-color: #dae3f3;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
+    position: absolute;
+    width: 40%;
+    height: auto;
+    top: 260px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+    text-align: left;
+    background-color: #dae3f3;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form h5#error-message {
+    width: 100%;
+    position: absolute;
+    top: 315px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    text-align: center;
+    color: red;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
+    position: absolute;
+    text-align: center;
+    top: 400px;
+    height: auto;
+    padding: 0;
+    width: 40%;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+  }
+  html body div#main div#green-field div#brown-field div#white-field a#registBtn {
+    position: absolute;
+    text-align: center;
+    text-decoration: underline;
+    width: 40%;
+    height: auto;
+    padding: 0;
+    top: 470px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    html body div#main div#green-field div#brown-field div#white-field {
-        margin: 15px;
-    }
-    html body div#main div#green-field div#brown-field div#white-field #title_login {
-        position: absolute;
-        text-align: center;
-        width: 90%;
-        height: auto;
-        top: 40px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 50px;
-        font-weight: bold;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#login_id {
-        position: absolute;
-        width: 70%;
-        height: auto;
-        top: 140px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 25px;
-        text-align: left;
-        background-color: #dae3f3;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
-        position: absolute;
-        width: 70%;
-        height: auto;
-        top: 210px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 25px;
-        text-align: left;
-        background-color: #dae3f3;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form h5#error-message {
-        width: 100%;
-        position: absolute;
-        top: 270px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        text-align: center;
-        color: red;
-    }
-    html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
-        position: absolute;
-        text-align: center;
-        width: 70%;
-        height: auto;
-        padding: 0;
-        top: 300px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-    }
-    html body div#main div#green-field div#brown-field div#white-field a#registBtn {
-        position: absolute;
-        text-align: center;
-        text-decoration: underline;
-        width: 40%;
-        height: auto;
-        padding: 0;
-        top: 360px;
-        left: 50%;
-        -webkit-transform: translateY(0) translateX(-50%);
-        transform: translateY(0) translateX(-50%);
-        font-size: 30px;
-    }
+  html body div#main div#green-field div#brown-field div#white-field {
+    margin: 15px;
+  }
+  html body div#main div#green-field div#brown-field div#white-field #title_login {
+    position: absolute;
+    text-align: center;
+    width: 90%;
+    height: auto;
+    top: 40px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 50px;
+    font-weight: bold;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#login_id {
+    position: absolute;
+    width: 70%;
+    height: auto;
+    top: 140px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 25px;
+    text-align: left;
+    background-color: #dae3f3;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#login_pass {
+    position: absolute;
+    width: 70%;
+    height: auto;
+    top: 210px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 25px;
+    text-align: left;
+    background-color: #dae3f3;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form h5#error-message {
+    width: 100%;
+    position: absolute;
+    top: 270px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    text-align: center;
+    color: red;
+  }
+  html body div#main div#green-field div#brown-field div#white-field form input#loginBtn {
+    position: absolute;
+    text-align: center;
+    width: 70%;
+    height: auto;
+    padding: 0;
+    top: 300px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+  }
+  html body div#main div#green-field div#brown-field div#white-field a#registBtn {
+    position: absolute;
+    text-align: center;
+    text-decoration: underline;
+    width: 40%;
+    height: auto;
+    padding: 0;
+    top: 360px;
+    left: 50%;
+    -webkit-transform: translateY(0) translateX(-50%);
+            transform: translateY(0) translateX(-50%);
+    font-size: 30px;
+  }
 }
-
-
 /*# sourceMappingURL=style_login.css.map */
