--- a/views/batterBox.ejs
+++ b/views/batterBox.ejs
@@ -40,9 +40,9 @@
                         <li id="box_count_3">第三打席：&nbsp;&nbsp;<p>一ゴロ</p>
                         </li>
                     </ul> -->
-                        <div id="order">打順 :
+                        <!-- <div id="order">打順 :
                             <%- responseBody.batterInfo[0].orderNo %>
-                        </div>
+                        </div> -->
                         <div id="name">
                             <%- responseBody.batterInfo[0].playerName %>
                         </div>
@@ -53,12 +53,24 @@
 
                         <form action="/scorebook?_method=PUT" method="post">
                             <!-- <input type="hidden" name="_method" value="PUT"> -->
-                            <input class="border border-dark rounded" id="result" name="result" onchange="changeFlg()" value="<%- responseBody.batterInfo[0].boxResult %>" maxlength="3"></input>
+                            <input id="result" class="border border-dark rounded" name="result" value="<%- responseBody.batterInfo[0].boxResult %>" disabled></input>
+
+                            <div id="typeAndresult">
+                                <label id="resultType" for="resultType" hidden="true">結果種別</label>
+                                <select id="selectType" class="form-select" name="selectType" onchange="changeFlgaaa()" hidden></select>
+                                <label id="battingResult" for="battingResult" hidden>打席結果</label>
+                                <data id="battingResult_hidden" value="<%- responseBody.batterInfo[0].boxResult %>" hidden></data>
+                                <select id="selectBattingResult" class="form-select" name="selectBattingResult" hidden></select>
+                            </div>
+
                             <input id="orderNum" type="hidden" name="orderNum" value=<%- responseBody.batterInfo[0].orderNo %>>
                             <input id="boxNum" type="hidden" name="boxNum" value=<%- responseBody.batterInfo[0].boxNum %>>
                             <input id="changeFlag" type="hidden" name="changeFlag" value=0>
                             <input id="resultEnterBtn" class="btn btn-success btn-lg" type="submit" value="決定">
                         </form>
+
+                        <button id="changeButton" class="btn btn-light" onclick="changeButtonClick()">変更</button>
+                        <button id="finishButton" class="btn btn-light" onclick="finishButtonClick()" hidden>完了</button>
 
                         <a href="/back" id="back" class="btn btn-warning">戻る</a>
 
@@ -72,7 +84,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <!-- <script src="/javascripts/basic2.js"></script> -->
+        <script src="/javascripts/basic6.js"></script>
         <script src="/javascripts/submit.js"></script>
 </body>
 
